--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=pickplace_db;user=root;password=;"
+    "DefaultConnection": "server=localhost;port=3306;database=pickplace_db;user=root;password=;",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-11073db3-2cfd-4da2-be9b-9f5ff4a14e76;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
